# Developer-Documentation-Ai-Assistant

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MAINTENANCE.md  PUBLICATION_READY.md  PUBLISHING_GUIDELINES.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  env.example  pyproject.toml  setup.py  setup_gpt.py  update_env.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
data/datasets/docs_snapshot_2025-08-10/: docs_pydantic_dev_latest_.txt  docs_python_org_3_.txt  docs_smith_langchain_com_.txt  docs_streamlit_io_.txt  faiss_ai_.txt  fastapi_tiangolo_com_.txt  github_com_facebookresearch_faiss_wiki.txt  huggingface_co_docs.txt  manifest.json  python_langchain_com_docs_concepts_.txt  python_langchain_com_docs_get_started_introduction.txt  python_langchain_com_docs_how_to_.txt  python_langchain_com_docs_tutorials_rag.txt  requests_readthedocs_io_en_latest_.txt  www_crummy_com_software_BeautifulSoup_bs4_doc_.txt  www_sbert_net_.txt
data/eval/: README.md  sample.jsonl
data/sources/: urls.txt
data/vector_store/: chroma.sqlite3
docs/: LEGITIMATE_SOURCES.md  model_card.md  publication_checklist.md
scripts/: _import_check.py  check_config.py  demo.py  eval_retrieval.py  make_dataset.py  setup.py  setup_professional.py  smoke_test.py
src/langchain_documentation_aichatbot/: __init__.py  cli.py  cli_provider.py
src/langchain_documentation_aichatbot/apps/: __init__.py  gradio_app.py  streamlit_app.py
src/langchain_documentation_aichatbot/apps/api/: __init__.py  main.py
src/langchain_documentation_aichatbot/core/: __init__.py  chatbot.py  document_loader.py  llm_factory.py  vector_store.py
src/langchain_documentation_aichatbot/utils/: __init__.py  config.py  helpers.py  safety.py
tests/: __init__.py  test_chatbot.py
